zeit.content.article changes
============================

3.4.5 (unreleased)
------------------

- Reactivate social media section, implement Facebook (VIV-387, VIV-371).

- Make Twitter and Facebook ressorts multi selectable (VIV-389).

- Reactivate breaking news feature (again), make title character limit soft,
  group checkboxes differently, add Twitter/Facebook (VIV-25).


3.4.4 (2014-06-05)
------------------

- Fix icon position in sprite (VIV-359, VIV-407)


3.4.3 (2014-06-05)
------------------

- Restrict rewriting of filenames to articles and breaking news,
  don't accidentally rewrite image filenames, for example.


3.4.2 (2014-06-04)
------------------

- Disable breaking news feature for the time being (again).


3.4.1 (2014-06-03)
------------------

- Deactivate social media section until Facebook is implemented (VIV-387).


3.4.0 (2014-06-03)
------------------

- Fix save of WhYSIWYG editor when the user clicks on an input field (VIV-395)

- Reactivate breaking news feature; add max length to title field (VIV-25).

- Add social media section (VIV-387 / VIV-396).

- Add block for referencing an external Liveblog (WEB-246).

- Rewrite filenames to match the SEO expectations while typing (VIV-338).

- Register and cleanup keydown event handlers properly (VIV-381).

- Remove iPad/Desktop tabs from inline preview (VIV-393).


3.3.1 (2014-05-13)
------------------

- Disable breaking news feature for the time being.


3.3.0 (2014-05-09)
------------------

- Add separate form for breaking news that only requires minimal input and
  publishes automatically (VIV-367).

- Add "SEO optimized" workflow checkbox (VIV-329).

- Remove unicode line breaks when pasting (WEB-299).


3.2.1 (2014-04-28)
------------------

- Fix breaking editor on wysiwyg save after autosave.


3.2.0 (2014-04-22)
------------------

- Reload only those body blocks that were edited, not the whole body area
  (VIV-11795).

- Display Google news keyword suggestions (VIV-359).

