@@ -1,0 +1,14 @@
+<p id="breaking-retract"
+   tal:condition="view/is_breaking"
+   i18n:domain="zeit.cms">
+  <span i18n:translate="">breaking-news-homepage</span>:
+  <span tal:replace="structure view/banner/@@published-icon" />
+  <a class="button"
+     id="breaking-retract-banner"
+     tal:condition="view/banner_published"
+     cms:cp-module="zeit.edit.LightBoxForm"
+     cms:lightbox-reload-id="breaking-retract"
+     tal:attributes="href string:${context/@@absolute_url}/@@breaking-banner-retract;
+                     cms:lightbox-reload-url request/getURL"
+     i18n:translate="">Retract Banner</a>
+</p>
