@@ -11,6 +11,8 @@ zeit.content.article changes
 - Reactivate breaking news feature (again), make title character limit soft,
   group checkboxes differently, add Twitter/Facebook (VIV-25).
 
+- Add button to retract breaking news banner (VIV-418).
+
 
 3.4.4 (2014-06-05)
 ------------------
